@@ -110,16 +110,14 @@
                 </div>
                 <!-- /ko -->
                 <div class="ck-allow-duplicate-transaction" data-bind="visible: isAllowDuplicateTransaction">
-                    <div class="field choice">
-                        <input type="checkbox"
-                            name="is_allow_duplicate_transaction"
-                            class="checkbox"
-                            id="is_allow_duplicate_transaction_cc"
-                            >
-                        <label class="label" >
-                            <span><!-- ko i18n: 'Allow Duplicate Transaction'--><!-- /ko --></span>
-                        </label>
-                    </div>
+                    <input type="checkbox"
+                        name="is_allow_duplicate_transaction"
+                        class="checkbox"
+                        id="is_allow_duplicate_transaction_cc"
+                        >
+                    <label class="label" for="is_allow_duplicate_transaction_cc">
+                        <span><!-- ko i18n: 'Allow Duplicate Transaction'--><!-- /ko --></span>
+                    </label>
                 </div>
                 <!-- ko if: (isEnabledReCaptcha())-->
                     <div class="g-recaptcha" id="cardknox_recaptcha"></div>
