@@ -1,5 +1,6 @@
 1.0.20
 - Update the plugin to the latest version of iFields 2.15.2401.3101
+- Fix Allow duplicate transaction checkbox not clickable
 
 1.0.19
 - Update the plugin to the latest version of iFields 2.15.2309.2601
